Fixed overflowing on desktop

--- a/src/UI/Layout.module.scss
+++ b/src/UI/Layout.module.scss
@@ -2,43 +2,50 @@
 @use '../styles/mixins' as *;
 
 .layout {
+  min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
   position: relative;
 }
 
 .header {
   height: 5rem;
   position: relative;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  a {
+    text-align: center;
+    img {
+      width: 50%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
 
   select {
     font-size: 2rem;
     border: 1px solid $primary;
     border-radius: 0.5rem;
-    position: absolute;
-    left: 0.5rem;
-    top: 0.5rem;
+    // position: absolute;
+    // left: 0.5rem;
+    // top: 0.5rem;
   }
   .logOut {
     @include btn();
     width: 10%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 1rem;
+    // position: absolute;
+    // top: 50%;
+    // transform: translateY(-50%);
+    // right: 1rem;
   }
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-
+  // transform: translateX(-50%);
+  text-align: center;
   a {
     text-decoration: none;
     font-size: 0.8rem;
