--- a/src/pages/RoomChat.module.css
+++ b/src/pages/RoomChat.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: initial;
   align-items: initial;
-  min-height: 75dvh;
+  max-height: 70dvh;
 }
 
 .chatContainer {
@@ -10,6 +10,7 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
+  flex: 1;
   flex-direction: column;
   display: flex;
   justify-items: center;
@@ -19,7 +20,8 @@
 .messagesContainer {
   width: 100%;
   border: 1px solid #1625f2;
-  max-height: 75dvh;
+  max-height: 70dvh;
+  flex: 1;
   overflow-y: auto;
   border-radius: 0.5rem;
   padding: 1rem;
